--- a/test.html
+++ b/test.html
@@ -152,6 +152,31 @@
         </div>
       </div>
 
+      <div class="author">
+        <div class="author-info">
+          <div class="avatar">
+            <img src="img/img.jpg" alt="Author name">
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-check-fill" viewBox="0 0 16 16">
+              <path d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708"></path>
+            </svg>
+          </div>
+          </div>
+          <div class="name">
+            <h4 class="name">
+              <span class="name">Fredrick Ochieng</span>
+            </h4>
+            <a href="/u/u0a43pbah6a" class="username">
+              <span class="text">U0A43PBAH6A</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
+                <path d="M4.53 4.75A.75.75 0 0 1 5.28 4h6.01a.75.75 0 0 1 .75.75v6.01a.75.75 0 0 1-1.5 0v-4.2l-5.26 5.261a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L9.48 5.5h-4.2a.75.75 0 0 1-.75-.75Z"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <button class="action following">following</button>
+      </div>
+
     </section>
     <section class="side">
       <div class="user-info">
