--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
     import InfoLoader from "./js/loaders/info.loader.js";
 
     import StoryFeed from "./js/feeds/stories.feed.js";
-    import OpinionFeed from "./js/feeds/opinions.feed.js";
+    import RepliesFeed from "./js/feeds/replies.feed.js";
     import PeopleFeed from "./js/feeds/people.feed.js"
 
     // Import containers
@@ -121,7 +121,7 @@
     customElements.define('people-loader', PeopleLoader);
     customElements.define('topics-loader', TopicsLoader);
     customElements.define('stories-feed', StoryFeed);
-    customElements.define('opinions-feed', OpinionFeed);
+    customElements.define('replies-feed', RepliesFeed);
     customElements.define('people-feed', PeopleFeed)
 
     // Register containers
