--- a/topic.html
+++ b/topic.html
@@ -43,7 +43,7 @@
     import TopicsLoader from "./js/loaders/topics.loader.js";
 
     import StoryFeed from "./js/feeds/stories.feed.js";
-    import OpinionFeed from "./js/feeds/opinions.feed.js";
+    import RepliesFeed from "./js/feeds/replies.feed.js";
     import PeopleFeed from "./js/feeds/people.feed.js"
 
     import PeopleContainer from "./js/containers/people.container.js";
@@ -79,7 +79,7 @@
     customElements.define('people-loader', PeopleLoader);
     customElements.define('topics-loader', TopicsLoader);
     customElements.define('stories-feed', StoryFeed);
-    customElements.define('opinions-feed', OpinionFeed);
+    customElements.define('replies-feed', RepliesFeed);
     customElements.define('people-feed', PeopleFeed)
 
     customElements.define('people-container', PeopleContainer);
