refactor: Update padding and gap in profile wrapper for user info section

--- a/profile.html
+++ b/profile.html
@@ -21,120 +21,11 @@
     content="https://getopas.pythonanywhere.com/@femar/debian-vs-ubuntu-linux-which-one-should-you-choose-1-23">
 
   <script type="module">
-    import AppHome from "./js/apps/home.app.js";
-    import AppPost from "./js/apps/post.app.js";
-    import AppSearch from "./js/apps/search.app.js";
-    import AppProfile from "./js/apps/profile.app.js";
-    import AppStory from "./js/apps/story.app.js";
-    import AppTopic from "./js/apps/topic.app.js";
-
-    import HeaderContainer from "./js/containers/header.container.js"
-    import StoryBody from "./js/story.body.js";
-
-    // Import post wrappers
-    import QuePost from "./js/post/que.post.js";
-    import QuickPost from "./js/post/quick.post.js";
-    import StoryPost from "./js/post/story.post.js";
-    import PollPost from "./js/post/poll.post.js";
-    import UserWrapper from "./js/wrappers/user.wrapper.js";
-
-    // Import wrappers
-    import PostWrapper from "./js/wrappers/post.wrapper.js";
-    import PollWrapper from "./js/wrappers/poll.wrapper.js"
-    import AuthorWrapper from "./js/wrappers/author.wrapper.js";
-    import HeaderWrapper from "./js/wrappers/header.wrapper.js";
-    import ProfileWrapper from "./js/wrappers/profile.wrapper.js";
-
-    // Import sections
-    import ProfileSection from "./js/sections/profile.section.js";
-
-    // Import elements
-    import CustomSpan from "./js/elements/span.element.js"
-
-    import OpinionWrapper from "./js/opinion.component.js";
-    import StoryWrapper from "./js/story.component.js";
-    import PersonWrapper from "./js/author.component.js";
-
-    // Import loaders
-    import StoryLoader from "./js/loaders/story.loader.js";
-    import PostLoader from "./js/loaders/post.loader.js";
-    import PeopleLoader from "./js/loaders/people.loader.js";
-    import TopicsLoader from "./js/loaders/topics.loader.js";
-    import InfoLoader from "./js/loaders/info.loader.js";
-
-    import StoryFeed from "./js/feeds/stories.feed.js";
-    import RepliesFeed from "./js/feeds/replies.feed.js";
-    import PeopleFeed from "./js/feeds/people.feed.js"
-
-    // Import containers
-    import PeopleContainer from "./js/containers/people.container.js";
-    import StoriesContainer from "./js/containers/stories-container.js"
-    import TrendingContainer from "./js/containers/trending.container.js"
-    import TopicsContainer from "./js/containers/topics.container.js";
-    import FormContainer from "./js/containers/form.container.js";
-    import AddContainer from "./js/containers/add.container.js";
-    import InfoContainer from "./js/containers/info.container.js";
-    import HighlightsContainer from "./js/containers/highlights.container.js";
-
-    import DiscoverPeople from "./js/containers/people.discover.js"
-
-
-    customElements.define('app-home', AppHome);
-    customElements.define('app-post', AppPost);
-    customElements.define('app-search', AppSearch);
-    customElements.define('app-profile', AppProfile);
-    customElements.define('app-story', AppStory);
-    customElements.define('app-topic', AppTopic);
-
-    customElements.define('header-container', HeaderContainer);
-    customElements.define('story-body', StoryBody);
-
-    // Register post wrappers
-    customElements.define('que-post', QuePost);
-    customElements.define('quick-post', QuickPost);
-    customElements.define('story-post', StoryPost);
-    customElements.define('poll-post', PollPost);
-
-    // Register wrappers
-    customElements.define('post-wrapper', PostWrapper);
-    customElements.define('poll-wrapper', PollWrapper);
-    customElements.define('author-wrapper', AuthorWrapper);
-    customElements.define('header-wrapper', HeaderWrapper);
-    customElements.define('profile-wrapper', ProfileWrapper);
-    customElements.define('user-wrapper', UserWrapper);
-
-    // Register sections
-    customElements.define('profile-section', ProfileSection);
-
-    // Register elements not as custom elements but extend HTMLElement
-    customElements.define('custom-span', CustomSpan, { extends: 'span' });
-
-    customElements.define('opinion-wrapper', OpinionWrapper);
-    customElements.define('story-wrapper', StoryWrapper);
-    customElements.define('person-wrapper', PersonWrapper);
-
-    // Register loaders
-    customElements.define('story-loader', StoryLoader);
-    customElements.define('post-loader', PostLoader);
-    customElements.define('info-loader', InfoLoader);
-
-    customElements.define('people-loader', PeopleLoader);
-    customElements.define('topics-loader', TopicsLoader);
-    customElements.define('stories-feed', StoryFeed);
-    customElements.define('replies-feed', RepliesFeed);
-    customElements.define('people-feed', PeopleFeed)
-
-    // Register containers
-    customElements.define('people-container', PeopleContainer);
-    customElements.define('stories-container', StoriesContainer);
-    customElements.define('trending-container', TrendingContainer);
-    customElements.define('topics-container', TopicsContainer);
-    customElements.define('form-container', FormContainer);
-    customElements.define('add-container', AddContainer);
-    customElements.define('info-container', InfoContainer);
-    customElements.define('highlights-container', HighlightsContainer);
-
-    customElements.define('discover-people', DiscoverPeople);
+    // initApp from "./js/index"
+    import iniApp from "./js/index.js";
+  
+    // Start the app
+    iniApp();
   </script>
 </head>
 
