--- a/search.html
+++ b/search.html
@@ -22,75 +22,11 @@
     content="https://getopas.pythonanywhere.com/@femar/debian-vs-ubuntu-linux-which-one-should-you-choose-1-23">
 
  <script type="module">
-    import AppHome from "./js/apps/home.app.js";
-    import AppPost from "./js/apps/post.app.js";
-    import AppSearch from "./js/apps/search.app.js";
-    import AppProfile from "./js/apps/profile.app.js";
-    import AppStory from "./js/apps/story.app.js";
-     import AppTopic from "./js/apps/topic.app.js";
-
-    import HeaderContainer from "./js/containers/header.container.js"
-    import StoryBody from "./js/story.body.js";
-
-    import OpinionWrapper from "./js/opinion.component.js";
-    import StoryWrapper from "./js/story.component.js";
-    import PostWrapper from "./js/wrappers/post.wrapper.js";
-    import PersonWrapper from "./js/author.component.js";
-    import UserWrapper from "./js/person.component.js"
-
-    import StoryLoader from "./js/loaders/story.loader.js";
-    import PostLoader from "./js/loaders/post.loader.js";
-    import PeopleLoader from "./js/loaders/people.loader.js";
-    import TopicsLoader from "./js/loaders/topics.loader.js";
-
-    import StoryFeed from "./js/feeds/stories.feed.js";
-    import RepliesFeed from "./js/feeds/replies.feed.js";
-    import PeopleFeed from "./js/feeds/people.feed.js"
-
-    import PeopleContainer from "./js/containers/people.container.js";
-    import StoriesContainer from "./js/containers/stories-container.js"
-    import TrendingContainer from "./js/containers/trending.container.js"
-    import TopicsContainer from "./js/containers/topics.container.js";
-    import FormContainer from "./js/containers/form.container.js";
-    import AddContainer from "./js/containers/add.container.js";
-
-    import DiscoverPeople from "./js/containers/people.discover.js"
-
-
-    customElements.define('app-home', AppHome);
-    customElements.define('app-post', AppPost);
-    customElements.define('app-search', AppSearch);
-    customElements.define('app-profile', AppProfile);
-    customElements.define('app-story', AppStory);
-    customElements.define('app-topic', AppTopic);
-
-    customElements.define('header-container', HeaderContainer);
-    customElements.define('story-body', StoryBody);
-
-    customElements.define('opinion-wrapper', OpinionWrapper);
-    customElements.define('story-wrapper', StoryWrapper);
-    customElements.define('post-wrapper', PostWrapper);
-    customElements.define('person-wrapper', PersonWrapper);
-    customElements.define('user-wrapper', UserWrapper);
-
-
-    customElements.define('story-loader', StoryLoader);
-    customElements.define('post-loader', PostLoader);
-
-    customElements.define('people-loader', PeopleLoader);
-    customElements.define('topics-loader', TopicsLoader);
-    customElements.define('stories-feed', StoryFeed);
-    customElements.define('replies-feed', RepliesFeed);
-    customElements.define('people-feed', PeopleFeed)
-
-    customElements.define('people-container', PeopleContainer);
-    customElements.define('stories-container', StoriesContainer);
-    customElements.define('trending-container', TrendingContainer);
-    customElements.define('topics-container', TopicsContainer);
-    customElements.define('form-container', FormContainer);
-    customElements.define('add-container', AddContainer);
-
-    customElements.define('discover-people', DiscoverPeople);
+    // initApp from "./js/index"
+    import iniApp from "./js/index.js";
+  
+    // Start the app
+    iniApp();
   </script>
 </head>
 
