refactor: Update padding, margin, and gap in profile and side sections

--- a/topic.html
+++ b/topic.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Blog title</title>
+  <link rel="stylesheet" href="theme.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="res.css">
 
@@ -30,16 +31,20 @@
 </head>
 
 <body>
-  <header-container id="U0AB236B6" create-account="/join" create-content="/create"
+  <!-- <header-container id="U0AB236B6" create-account="/join" create-content="/create"
     user-profile="/u/U0AB236B6" user-img="img/img.jpg" user-analytics="/u/U0AB236B6/analytics"
     stories-popular="/stories/popular" stories-recent="/stories/recent" stories-curated="/stories/curated"
     discover="/discover" home="/home" journals="/journals" authors="/authors" github="https://github.com/fescii"
     supabase="/link" resource-apis="/apis" resource-feature="/feature-request" resource-shop="/shop"
     resource-guide="/guides" resource-newsletter="/newsletter" resource-rss="/rss">
-  </header-container>
+  </header-container> -->
 
-  <app-topic subscribers="901" stories="609" id="T0A43PBA"
-    name="health care" url="/topics/T0A43PBA"  subscribed="true">
+  <app-topic subscribers="901" stories="67259" hash="T0A43PBA69HAB"
+    name="health care" url="/t/T0A43PBA69HAB"  subscribed="true"
+    author-username="U0A43PBAH6A"
+    author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
+    author-following="263" author-follow="false" author-bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
+      I love to write about technology and software development.">
   </app-topic>
 </body>
 
